# university

./: .gitignore
PUL/: PUL_WebConstruction.7z
semester_1/ItISaT/1/: lab_1.docx
semester_1/ItISaT/2/: excel.xlsx
semester_3/: .gitignore
semester_3/AaP/Исходный_Код/: Makefile
semester_3/OSaE/: help.c
semester_3/OSaE/2/: doc.docx
semester_3/OSaE/4/: doc.docx
semester_3/OSaE/5/: doc.docx
semester_3/OSaE/6/: doc.docx
semester_3/OSaE/7/: doc.docx
semester_3/SAB/Методички/: 4 ЛР.docx
semester_3/SAB/Отчёты/: lab_3.docx  lab_4.docx  Рисунки_для_ЛР_1.drawio
semester_3/ООП/Лекции/: Лекция_01-Введение.odp
semester_5/DM/CGT/: data.sql  database-template.sqlite  diagrams.drawio  with-some-date.sqlite  Грязновик.docx
semester_5/DM/lectures/: УД_Лекция2.txt
semester_5/IT/activity/: Filozop_IS-b-20-2-o_Notebook-5.ipynb  Filozop_IS-b-20-2-o_Notebook-7.ipynb  Filozop_IS-b-20-2-o_Notebook-9.ipynb  func.txt
semester_6/: .gitattributes
semester_6/TP/: HADI.ods  SWOT-bea.ods  final.odt  idea.txt  presentation.pptx  result_calculator.py  tasks.txt  КлиРазраб.odt  ПЗ2.md
semester_7/: .gitattributes  README.md
semester_7/DaPCT/: .gitignore
semester_7/ProP/: VKR.odt  presentation.odp
semester_7/XPP/src/lab4/: CMakeLists.txt  qmlmodules
semester_7/XPP/src/lab4/content/: CMakeLists.txt  Screen01.ui.qml
semester_7/XPP/src/lab4/imports/: CMakeLists.txt
semester_7/XPP/src/lab4/src/: import_qml_plugins.h
semester_8/: README.md
semester_8/final_work/: .gitignore  Заявление.odt
бакалавриат/PUL/: .gitignore
бакалавриат/semester_6/: README.md
(+760 files in other folders)
